@@ -18,19 +18,37 @@ volatile bool global_ready = false;
 int start(int argc, char **argv) {
   int rc;
 
+  argv[0] = "harp";
+
   options_t *options = read_options(argc, argv);
 
   initialize_logger(options);
 
+  if(options->background) {
+    pid_t pid = fork();
+    if(pid == 0) {
+      rc = setsid();
+      if(rc == -1) {
+        logerror("start:setsid");
+        return EXIT_FAILURE;
+      }
+    } else if(pid == -1) {
+      logerror("start:fork");
+      return EXIT_FAILURE;
+    } else {
+      return EXIT_SUCCESS;
+    }
+  }
+
   loader_environment_t loader_environment;
   initialize_loader(&loader_environment, options);
 
-  struct sigaction sigusr1_action;
-  sigusr1_action.sa_handler = &sigusr1_handler;
-  sigusr1_action.sa_mask    = 0;
-  sigusr1_action.sa_flags   = 0;
+  struct sigaction sighup_action;
+  sighup_action.sa_handler = &sighup_handler;
+  sighup_action.sa_mask    = 0;
+  sighup_action.sa_flags   = 0;
 
-  rc = sigaction(SIGUSR1, &sigusr1_action, NULL);
+  rc = sigaction(SIGHUP, &sighup_action, NULL);
   if(rc != 0) {
     logerror("start:sigaction");
     return EXIT_FAILURE;
@@ -49,48 +67,23 @@ int start(int argc, char **argv) {
 
   reload_configuration(&loader_environment, options->chroot_directory);
 
-  if(options->background) {
-    pid_t pid = fork();
-    if(pid == 0) {
-      rc = setsid();
-      if(rc == -1) {
-        logerror("start:setsid");
-        return EXIT_FAILURE;
-      }
-    } else if(pid == -1) {
-      logerror("start:fork");
-      return EXIT_FAILURE;
-    } else {
-      return EXIT_SUCCESS;
-    }
-  }
+  struct group  *grp = NULL;
+  struct passwd *pwd = NULL;
 
   if(options->group) {
-    struct group *grp = getgrnam(options->group);
+    grp = getgrnam(options->group);
     if(grp == NULL) {
-      logmsg(LOG_ERR, "start:getpwnam: Couldn't find group \"%s\"\n",
+      logmsg(LOG_ERR, "start:getpwnam(%s): Couldn't find group\n",
              options->group);
-      return EXIT_FAILURE;
-    }
-
-    rc = setgid(grp->gr_gid);
-    if(rc != 0) {
-      logmsg(LOG_ERR, "start:setgid: Couldn't set the group ID\n");
       return EXIT_FAILURE;
     }
   }
 
   if(options->user) {
-    struct passwd *pwd = getpwnam(options->user);
+    pwd = getpwnam(options->user);
     if(pwd == NULL) {
-      logmsg(LOG_ERR, "start:getpwnam: Couldn't find user \"%s\"\n",
+      logmsg(LOG_ERR, "start:getpwnam(%s): Couldn't find user\n",
              options->user);
-      return EXIT_FAILURE;
-    }
-
-    rc = setuid(pwd->pw_uid);
-    if(rc != 0) {
-      logmsg(LOG_ERR, "start:setuid: Couldn't set the user ID\n");
       return EXIT_FAILURE;
     }
   }
@@ -105,6 +98,32 @@ int start(int argc, char **argv) {
     rc = chdir("/");
     if(rc == -1) {
       logerror("start:chdir");
+      return EXIT_FAILURE;
+    }
+  }
+
+  if(options->group) {
+    rc = setgid(grp->gr_gid);
+    if(rc != 0) {
+      logmsg(LOG_ERR, "start:setgid(%d): Couldn't set the group ID\n",
+             grp->gr_gid);
+      return EXIT_FAILURE;
+    }
+
+    rc = initgroups(options->group, grp->gr_gid);
+    if(rc == -1) {
+      logmsg(LOG_ERR,
+             "start:initgroups(%s, %d): You must run the program as root\n",
+             options->group, grp->gr_gid);
+      return EXIT_FAILURE;
+    }
+  }
+
+  if(options->user) {
+    rc = setuid(pwd->pw_uid);
+    if(rc != 0) {
+      logmsg(LOG_ERR, "start:setuid(%d): Couldn't set the user ID\n",
+             pwd->pw_uid);
       return EXIT_FAILURE;
     }
   }
