@@ -44,7 +44,7 @@
             </p>
 
             <p>
-              <a href="/releases/harp-0.9.tar.gz"
+              <a href="/releases/harp-1.0.tar.gz"
                  class="btn btn-primary btn-lg">
                 <span class="glyphicon glyphicon-download-alt"></span>
                 Download latest version
@@ -56,6 +56,16 @@
         <aside class="col-md-4">
           <div class="page-header">
             <h1>Releases</h1>
+          </div>
+
+          <div class="alert alert-info">
+            Version 1.0 (9 Oct 2014)
+            <a href="/releases/harp-1.0.tar.gz" title="Download">
+              <span class="glyphicon glyphicon-download-alt"></span>
+              Download
+            </a>
+            -
+            <a href="/doc/1.0" title="Documentation">Doc</a>
           </div>
 
           <div class="alert alert-info">
@@ -110,9 +120,9 @@
           </p>
 
           <div class="well well-sm">
-            curl http://www.harphttp.org/releases/harp-0.9.tar.gz -o harp-0.9.tar.gz<br><br>
-            tar xzf harp-0.9.tar.gz<br>
-            cd harp-0.9<br><br>
+            curl http://www.harphttp.org/releases/harp-1.0.tar.gz -o harp-1.0.tar.gz<br><br>
+            tar xzf harp-1.0.tar.gz<br>
+            cd harp-1.0<br><br>
             ./configure<br>
             make<br><br>
             sudo make install
@@ -146,7 +156,7 @@
             </dd>
 
             <dt>
-              <a href="doc/0.9">
+              <a href="doc/1.0">
                 Documentation for the latest version
               </a>
             </dt>
